menambahkan h2 dan merubah warna menjadi merah

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 
     <title>Latihan GIT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Ini adalah paragraf 1</p>
+    <p>Ini adalah paragraf 2</p>
 </body>
 </html>
